--- a/landing-page/img/Landing Page project 2.htm
+++ b/landing-page/img/Landing Page project 2.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
+<!-- saved from url=(0073)file:///Users/joycevanweverwijk/Documents/GitHub/landing-page/index.html# -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Landing Page project 2</title>
   <!-- Load Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cousine&display=swap" rel="stylesheet">  <!-- Load Styles -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400&display=swap" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="./Landing Page project 2_files/css" rel="stylesheet">  <!-- Load Styles -->
+  <link href="./Landing Page project 2_files/css(1)" rel="stylesheet">
+  <link href="./Landing Page project 2_files/styles.css" rel="stylesheet">
 </head>
 <body>
   <!-- HTML Follows BEM naming conventions 
@@ -16,7 +16,7 @@
   <header class="page__header">
     <nav class="navbar__menu" id="navmenu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
-      <ul id="navbar__list"></ul>
+      <ul id="navbar__list"><li class="list__item"><a class="linktosection" href="file:///Users/joycevanweverwijk/Documents/GitHub/landing-page/index.html#">Pareidolia</a></li><li class="list__item"><a class="linktosection" href="file:///Users/joycevanweverwijk/Documents/GitHub/landing-page/index.html#">Quixotic</a></li><li class="list__item"><a class="linktosection" href="file:///Users/joycevanweverwijk/Documents/GitHub/landing-page/index.html#">Elysian</a></li><li class="list__item"><a class="linktosection" href="file:///Users/joycevanweverwijk/Documents/GitHub/landing-page/index.html#">Petrichor</a></li></ul>
     </nav>
   </header>
   <main>
@@ -27,7 +27,7 @@
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
     The first section is set to active class by default -->
-    <section id="section1" data-block="section1">
+    <section id="section1" data-nav="Section 1">
       <div class="landing__container">
         <div class="line"></div>
         <h2>Pareidolia</h2>
@@ -37,7 +37,7 @@
         <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
       </div>
     </section>
-    <section id="section2" data-block="section2">
+    <section id="section2" data-nav="Section 2">
       <div class="landing__container">
         <div class="line"></div>
         <h2>Quixotic</h2>
@@ -47,7 +47,7 @@
         <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
       </div>
     </section>
-    <section id="section3" data-block="section3">
+    <section id="section3" data-nav="Section 3">
       <div class="landing__container">
         <div class="line"></div>
         <h2>Elysian</h2>
@@ -57,7 +57,7 @@
         <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
       </div>
     </section>
-    <section id="section4" data-block="section4">
+    <section id="section4" data-nav="Section 4">
       <div class="landing__container">
         <div class="line"></div>
         <h2>Petrichor</h2>
@@ -69,8 +69,8 @@
     </section>
   </main>
   <footer class="page__footer">
-    <p>&copy Joyce</p>
+    <p>© Joyce</p>
   </footer>
-<script type="text/javascript" src="js/app.js"></script>
-</body>
-</html>
+<script type="text/javascript" src="./Landing Page project 2_files/app.js"></script>
+
+</body></html>
